# 433

./: .gitignore  testCommunication.py  trials.json
homework14/: computeCoeffs.py  fft.py  fft_IIR.py  fft_convolve.py  fft_movingAverage.py  plotData.py  readData.py
homework15/: motorBase.STEP  wheel.STEP
homework16/: CMakeLists.txt  homework16.c
pico/: CMakeLists.txt
pico/homework12/: CMakeLists.txt  homework12.c
pico/homework13/: CMakeLists.txt  MPU6050M.h  main.c
pico/homework13_old/: CMakeLists.txt  MPU6050M.c  homework13.c
pico/homework16/: homework16.c
pico/homework2/: CMakeLists.txt  blink.c
pico/homework3/: CMakeLists.txt  homework3.c
pico/homework4/: CMakeLists.txt  homework4.c  spiExample.c
pico/homework5/: CMakeLists.txt  homework5.c
pico/homework6/: CMakeLists.txt  font.c  font.h  homework6.c
pico/homework7/: CMakeLists.txt  exampleUart.c  font.c  homework7.c
pico/homework9/: CMakeLists.txt  homework9.c
pico/spinner/: CMakeLists.txt  spinner.c
pico/tachometer/: CMakeLists.txt  tachometer.c
